welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: ';' expected but '.' found.
	if ( (nums(k+1) == (nums(k)+5)) && ( (nums(k) -  (nums(k+2)))) <=1)|| math.abs((nums(k+2) -  (nums(k)))) <=2))
                                                                                  ^